finally fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-/* variables> */
 
 
 /* fonts */
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+/* variables> */
 
 :root{
 	--color-green:  #00c600;
@@ -59,7 +59,7 @@ h4 {
   margin-block: 0.5rem;
 }
 
-footer > h4 {
+aside > h4 {
   text-align: center;
 }
 
@@ -105,29 +105,19 @@ a {
 }
 
 /* formatting */
+
+.page-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+    max-width: 1024px;
+    margin-inline: auto;
+}
+
 .flex-col {
   display: flex;
   flex-direction: column;
 }
-/* 
-.page-container{
-  display: flex;
-  flex-direction: column;
-  gap: 0;
-  justify-content: center;
-}
-
-@media screen and (min-width:768px) {
-  .page-container{
-    flex-direction: row;
-    margin-inline: auto;
-    
-  }
-  aside{
-    width: 5rem;
-  }
-  
-} */
 
 select{
 	outline: none;
@@ -147,12 +137,17 @@ ul{
 	padding: 0;
 }
 
-footer > ul {
+aside > ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
+}
+@media screen and (min-width:768px) {
+  aside>ul{
+    flex-direction: column;
+  }
 }
 
 li {
@@ -168,7 +163,6 @@ main.home {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  max-width: 1024px;
 }
 
 #profile {
@@ -200,7 +194,6 @@ main.home {
   flex-direction: column;
   border-image-slice: 1;
   margin-top: 1.5rem;
-  height: 100%;
 }
 
 .block-header {
@@ -313,15 +306,16 @@ li.block{
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 1rem;
     grid-row-gap: 0px;
-    max-height: 100dvh;
-
     max-width: 980px;
+  }
+  .page-container{
+    flex-direction: row;
   }
 
   #profile__container {
     grid-area: 1 / 1 / 3 / 2;
   }
-  .right {
+  .left {
     grid-area: 3 / 1 / 6 / 2;
   }
   #blurbs {
@@ -373,44 +367,11 @@ button{
   filter: sepia(100%) hue-rotate(270deg) saturate(5);
 }
 
-@media screen and (min-height: 650px) and (min-width: 768px) {
-  .right {
-    margin-top: -2rem;
-  }
-}
-@media screen and (min-height: 850px) and (min-width: 768px) {
-  .right {
-    margin-top: -3rem;
-  }
-}
-@media screen and (min-height: 900px) and (min-width: 768px) {
-  .right {
-    /* margin-top: -5rem; */
-  }
-}
-
-@media screen and (min-height: 1050px) {
-  .right {
-    /* margin-top: -8rem; */
-  }
-}
-@media screen and (min-height: 1150px) and (min-width: 768px) {
-  .right {
-    /* margin-top: -10rem; */
-  }
-}
-
-.right {
-  display: flex;
-  flex-direction: column;
-  /* gap: 0.5rem; */
-}
 
 #contact-input,
 input,
 button {
   background-color: black;
-  /* color: var(--color-green); */
   outline: none;
   width: 100%;
   border: none;
